Changelog
=========

1.3 (unreleased)
----------------

- Nothing changed yet.


1.2 (2013-03-06)
----------------

- Removed the running of tests. I always found it a bit iffy, and getting
  rid of it solved a lot of issues. Pyroma is now focused solely on
  packaging quality.
  
- A package on PyPI with several versions will no longer return an error.

- Now looks for documentation on pythonhosted.org or readthedocs.org.

- Adds a hook for zest.releaser, so it can be run after doing the checkout,
  before uploading to PyPI.


1.1 (2013-03-05)
----------------

- Better handling if there is no package data, for example if setup.py doesn't
  call setup() unless you run it as the "__main__" script.
  
- If setup.py doesn't call setup() look for a main() script and try to run it.


1.0 (2013-03-05)
----------------

- Support for Python 3.3

- Added test for PEP 386 compliance.


0.9.3 (2011-03-17)
------------------

- It's now using a ProxyStub for the PyPI xmlrpclib during tests.

- Removed the Dependency rating.

- Added a rating that runs tests, to see if they run. This will also take
  care of checking for dependencies.


0.9.2 (2011-03-13)
------------------

- Commented out the dependency test, it was too unreliable.

- Fixed the ReST.

- Python 3 support.


0.9.1 (2011-03-08)
------------------

- Initial release